[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=45', 'wheel']

[project]
dependencies = [
  'ansible==11.12.0',
  'ansible-lint==25.12.0',
  'boto3==1.42.5',
  'botocore==1.42.5',
  'deepmerge==2.0',
  'docker==7.1.0',
  'dotenv-cli==3.4.1',
  'github3-py==4.0.1',
  'jmespath==1.0.1',
  'kubernetes==33.1.0',
  'lxml==6.0.2',
  'molecule==25.12.0',
  'molecule-plugins==25.8.12',
  'netaddr==1.3.0',
  'passlib==1.7.4',
  'podman==5.6.0',
  'psycopg2-binary==2.9.11',
  'pydantic==2.12.5',
  'ruamel-yaml==0.18.16',
  'typer==0.20.0',
  'urllib3==2.6.1',
  'xmltodict==1.0.2',
  'yamllint==1.37.1',
]
description = 'Dependency management for PokerOps Ansible Actions devbox plugin'
name = 'pokerops-ansible-utils'
requires-python = '>=3.8,<3.14'
version = '0.0.0'

[tool]
[tool.pyright]
reportMissingTypeStubs = false
venv = '.venv'
venvPath = '.'

[tool.ruff]
line-length = 160

[tool.setuptools]
packages = []
