[project]
dependencies = [
  "ansible==11.13.0",
  "ansible-lint==25.12.2",
  "boto3==1.42.96",
  "botocore==1.42.96",
  "deepmerge==2.0",
  "docker==7.1.0",
  "dotenv-cli==3.4.1",
  "github3-py==4.0.1",
  "jmespath==1.1.0",
  "kubernetes==33.1.0",
  "lxml==6.1.0",
  "molecule==25.12.0",
  "molecule-plugins==25.8.12",
  "netaddr==1.3.0",
  "passlib==1.7.4",
  "podman==5.8.0",
  "psycopg2-binary==2.9.12",
  "pydantic==2.13.3",
  "ruamel-yaml==0.19.1",
  "typer==0.25.0",
  "urllib3==2.6.3",
  "xmltodict==1.0.4",
  "yamllint==1.38.0",
]
description = "Dependency management for PokerOps Ansible Actions devbox plugin"
name = "pokerops-ansible-utils"
requires-python = ">=3.11,<3.14"
version = "0.0.0"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "wheel"]

[tool.pyright]
reportMissingTypeStubs = false
venv = ".venv"
venvPath = "."

[tool.ruff]
line-length = 160

[tool.setuptools]
packages = []
