[project]
name = "ansible-utils"
version = "0.0.0"
description = ""
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "pokerops-ansible-utils@git+https://github.com/pokerops/ansible-utils@version",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 160
