[project]
name = "ansible-utils"
version = "0.0.0"
description = ""
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pokerops-ansible-utils@git+https://github.com/pokerops/ansible-utils@master",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 160
